# fosm-mlops

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.serve  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  gen_synthetic.py  pyproject.toml
.github/workflows/: build-push.yml  lint-test.yml  train-eval.yml
ADR/: 0001-architecture.md  0002-model-registry.md
ansible/: inventory.ini  site.yml
configs/: __init__.py
configs/data/: __init__.py  default.yaml
configs/eval/: __init__.py  default.yaml
configs/features/: __init__.py  default.yaml
configs/model/: __init__.py
configs/model/anomaly/: isolation_forest.yaml  one_class_svm.yaml  zscore.yaml
configs/model/classical/: lightgbm.yaml  logistic_regression.yaml  random_forest.yaml  xgboost.yaml
configs/model/deep/: autoencoder.yaml  conv1d.yaml  gru.yaml  lstm.yaml
configs/train/: __init__.py  default.yaml
docs/: Code_Review_Checklist.md  ModelCardTemplate.md  Operational_Runbook.md  Security.md
k8s/: api-deployment.yaml  grafana.yaml  hpa.yaml  minio.yaml  mlflow.yaml  postgres.yaml  prometheus.yaml  pvc-models.yaml  tf-serving.yaml
monitoring/: prometheus.yml
notebooks/: 01_eda_signal_visuals.ipynb  02_feature_benchmarks.ipynb  03_model_benchmarks.ipynb
sagemaker/: deploy.py  train.py
scripts/: evaluate.py  export_tf_model.py  train.py
serve/torchserve/: handler.py
spark_jobs/: anomaly_batch_scoring.py  feature_rollup.py  ingest_to_bronze.py
src/fosm_mlops/: __init__.py
src/fosm_mlops/features/: build_features.py  signal_processing.py
src/fosm_mlops/ingest/: batch.py  stream.py
tests/: test_api.py  test_evaluate.py  test_feature_builder.py  test_models.py  test_signal_processing.py
(+10 files in other folders)
